updating data structures

--- a/config.properties
+++ b/config.properties
@@ -1,27 +1,24 @@
 
 # ---------------------------------- Paths Config (Must be set correctly by user) -----------------------------
 
-dataset_path=/Users/dhouib/Desktop/Dbpedia-v2.nt
-resources_path=/Users/dhouib/Desktop/COSE/src/main/resources
-output_file_path=/Users/dhouib/Desktop/COSE/Output/
-originalGraphPath =/Users/dhouib/Desktop/Dbpedia-v1.nt
-SHAPES_FILE_PATH =/Users/dhouib/Desktop/Dbpedia/default/Dbpedia-v1_QSE_FULL_SHACL.ttl
+dataset_path=/data/ssd/Dbpedia/dbpedia-v2.nt
+resources_path=/home/baya/COSE/src/main/resources
+output_file_path=/home/baya/COSE/Output/
+originalGraphPath=/data/ssd/Dbpedia/dbpedia-v1.nt
+SHAPES_FILE_PATH =/home/baya/shapes/dbpedia-v1_FULL_SHACL.ttl
+graphDataPath=/home/baya/COSE/graph_data.kryo
 
-
-# ---------------------------------- Default COSE Config (User can update as per requirement)-----------------------------
-
-expected_number_classes=100
+# ---------------------------------- Default Config (User can update as per requirement)-----------------------------
+qse_specific_classes=false
+shapesFromSpecificClasses= false
+expected_number_classes=300
 expected_number_of_lines=10000000
 extractMaxCardConstraints = false
-config_dir_path=/Users/dhouib/Desktop/COSE/config/
-total_lines=$(wc -l < "$dataset_path")
-SAMPLE_SIZE=$(echo "$total_lines * 0.1" | bc | awk '{print int($1)}')
+SAMPLE_SIZE = 1000
+config_dir_path=/home/baya/COSE/config/
 
 # default instance type property is rdf:type
 instance_type_property=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>
-
-# enable this if your graph is WikiData
-#instance_type_property=<http://www.wikidata.org/prop/direct/P31>
 
 # annotate shapes with support and confidence
 annotateSupportConfidence=true
